<resources>
    <string name="app_name">TeamsEmbedAndroidGettingStarted</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_teams">Teams</string>
    <string name="title_acs">ACS</string>
    <string name="title_settings">Settings</string>
    <string name="title_acs_call">Call 8:echo123</string>
    <string name="title_end_call">End Call</string>
    <string name="title_stop_acs">Stop ACS</string>
    <string name="title_group_call">Join Group Call</string>
    <string name="title_hang_up">Hang up and stop Teams</string>
    <string name="title_join_meeting">Join Meeting</string>
    <string name="video_off">Cam_off</string>
    <string name="video_on">Cam_on</string>
    <string name="mic_off">Mic_off</string>
    <string name="mic_on">Mic_on</string>
    <string name="audio_speaker">Speaker</string>
    <string name="raise_hand">Hand</string>
    <string name="end_call">End</string>
    <string name="roster">Roster</string>
    <string name="more">More</string>
    <string name="hangup_successful">Hangup was successful</string>
    <string name="hangup_failed">Hangup failed</string>
    <string name="sdk_initializing">Teams SDK initializing ...</string>
    <string name="sdk_initialized">Teams SDK initialized</string>
    <string name="sdk_initilialize_failed">Failed to initialize Teams SDK</string>
    <string name="sdk_call_connecting">Started to join ...</string>
    <string name="sdk_call_initialize_fail">Call didn\'t initialize ...</string>
    <string name="sdk_disposed">Teams SDK successfully disposed</string>
    <string name="sdk_dispose_failed">Teams SDK dispose failed</string>
    <string name="acs_call_success">Outgoing call placed successfully</string>
    <string name="acs_call_failed">Failed to get call object</string>
    <string name="acs_disposing">Disposing ACS</string>
    <string name="acs_disposed">Disposed ACS</string>
    <string name="acs_dispose_failed">ACS dispose failed.</string>
    <string name="acs_call_agent_success">Call agent successfully created</string>
    <string name="acs_call_agent_failed">Failed to create call agent</string>
    <string name="acs_credential_failed">Failed to create CommunicationTokenCredential</string>
    <string name="call_connecting">Connecting</string>
    <string name="call_connected">Connected</string>
    <string name="call_in_lobby">In Lobby</string>
    <string name="no_active_call">No active call</string>
    <string name="device_audio">Device</string>
    <string name="speaker">Speaker</string>
    <string name="audio_off">Audio Off</string>
    <string name="sdk_shared_pref">sdk_pref</string>
    <string name="meeting_url">meeting_url</string>
    <string name="access_token">access_token</string>
    <string name="group_Id">group_Id</string>
    <string name="show_staging_call_screen">Show staging call screen</string>
    <string name="customize_call_screen">Customize call screen</string>
    <string name="save">Save</string>
    <string name="switch_off">Off</string>
    <string name="switch_on">On</string>
    <string name="sdk_not_initialized">SDK not initialized</string>
    <string name="meeting_url_str">Meeting Url</string>
    <string name="acs_token_str">ACS token</string>
    <string name="group_id_str">Group ID</string>
    <string name="save_success">Save success</string>
    <string name="customizeScreen_enabled">customizeScreen_enabled</string>
    <string name="stagingScreen_enabled">stagingScreen_enabled</string>
</resources>