<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_audio"
        android:layout_gravity="center_vertical"
        android:padding="8dp"/>


    <TextView
        android:id="@+id/speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        android:layout_gravity="center_vertical"
        android:padding="8dp"/>


    <TextView
        android:id="@+id/audio_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_off"
        android:layout_gravity="center_vertical"
        android:padding="8dp"/>

</LinearLayout>