<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:clipToPadding="true">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="yes"
        android:focusable="true"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:background="#85000000"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp" >
            <Button
                android:id="@+id/end_call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/end_call"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:clickable="false"
                />
            <Button
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:text="@string/more"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:clickable="false"
                />
            <Button
                android:id="@+id/people_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:text="@string/roster"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:clickable="false"
                />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>